crates/unblock-model/tests/snapshots/schema_snapshots__graph_edge.snap
---
source: crates/unblock-model/tests/schema_snapshots.rs
expression: json
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "GraphEdge",
  "description": "A directed dependency edge.",
  "type": "object",
  "properties": {
    "dep_type": {
      "description": "The dependency type.",
      "$ref": "#/$defs/DependencyType"
    },
    "from": {
      "description": "The source issue id.",
      "type": "string"
    },
    "to": {
      "description": "The target issue id.",
      "type": "string"
    }
  },
  "required": [
    "from",
    "to",
    "dep_type"
  ],
  "$defs": {
    "DependencyType": {
      "type": "string"
    }
  }
}
