crates/unblock-model/tests/snapshots/schema_snapshots__issue_type.snap
---
source: crates/unblock-model/tests/schema_snapshots.rs
expression: json
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "IssueType",
  "type": "string"
}
