crates/unblock-model/tests/snapshots/schema_snapshots__status.snap
---
source: crates/unblock-model/tests/schema_snapshots.rs
expression: json
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Status",
  "type": "string"
}
